Closed Bug 285030 Opened 21 years ago Closed 21 years ago

BCData::mCornerBevel is uninitialized

Categories

(Core :: Layout: Tables, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

Details

Attachments

(1 file)

From http://weblogs.mozillazine.org/roc/archives/2005/03/visual_regressi.html A bug in painting table collapsing-borders where the BCData::mCornerBevel bit is uninitialized, making Gecko occasionally think that a border should be bevelled when it shouldn't and throwing the painting out of alignment.
Attachment #176491 - Flags: superreview?(bzbarsky)
Attachment #176491 - Flags: review?(bernd_mozilla)
Attachment #176491 - Flags: review?(bernd_mozilla) → review+
Comment on attachment 176491 [details] [diff] [review] super-trivial fix sr=bzbarsky
Attachment #176491 - Flags: superreview?(bzbarsky) → superreview+
checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: