Bug 285030. Ensure BCData::mCornerBevel is initialized. r=bernd, sr=bzbarsky